# gaucho_guardian

./: .gitignore  README.md  RMP_scraping.py  api_data_setup.py  api_testdownloadjsonfile.py  app.py  config.py  course_service.py  course_service_copy.py  daily_nexus_grades_scrape.py  filterclass_function.py  filterclass_test2.py  grades_filtered.csv  pyproject.toml  schedule_optimizer.py  scheduling_conflict_checks.py  scoring_algorithm.py  winter_quarter_codes.py
templates/: index.html
